# parsingTgBot

./: Dockerfile  config.py  database.py  docker-compose.yml  main.py  news_dict.json  parser.py  pyproject.toml  requirements.txt  subscribed_users.json  utils.py
Keyboards/: replyKeyboard.py
bot/: config.py  main.py  utils.py
bot/Keyboards/: inlineKeyboard.py  replyKeyboard.py
bot/db/: database.py
bot/routers/: __init__.py
bot/routers/commands/: __init__.py  base_commands.py
bot/utils/: utils.py
routers/commands/: base_commands.py
