[project]
name = "tgbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Lxg1c",email = "teran_2005@mail.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml (>=5.3.0,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "aiogram (>=3.17.0,<4.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
