[tool.poetry]
package-mode=false
name = "tgbot"
version = "0.1.0"
description = ""
authors = ["Lxg1c <teran_2005@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
lxml = "^5.3.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
aiogram = "^3.17.0"
pydantic-settings = "^2.7.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"